Agregado video demo del proyecto

--- a/index.html
+++ b/index.html
@@ -3,12 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Demo del Proyecto</title>
+    <title>Demo del Proyecto - Reconocimiento de Aves</title>
 </head>
 <body>
-    <h1>Reconocimiento de Aves - Demo</h1>
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/1ubZwLGUeyg" 
-            frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" 
-            allowfullscreen></iframe>
+    <h1>Demo del Proyecto</h1>
+    <p>Este es un video de demostración del proyecto "Reconocimiento de Aves".</p>
+
+    <!-- Enlace para reproducir el video desde YouTube -->
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/1ubZwLGUeyg" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
 </body>
 </html>
